1.8.20: Fix gh logos in header. 1.8.21: Fix simple notes margin when menu hidden. 1.8.22: Add z-index for lock icon.

--- a/src/src/App.css
+++ b/src/src/App.css
@@ -158,12 +158,17 @@ code {
     right: 3px;
     transition: all 500ms ease-in-out;
     opacity: 0;
+    z-index: 100;
 }
 
 .lock-round-icon {
     width: 40px;
     border: 2px solid white;
     border-radius: 50%;
+}
+
+.simple-notes-label {
+    transition: all 0.5s ease-in-out;
 }
 
 .menu-hidden .lock-round-icon-wrapper {
